Bug 381701 - systemsettings sidebar view crashes in kservice
Summary: systemsettings sidebar view crashes in kservice
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: sidebarview (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR crash
Target Milestone: ---
Assignee: Marco Martin
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-06-26 23:49 UTC by bluescreenavenger
Modified: 2017-07-06 12:44 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Full stackdump of systemsettings crash (32.39 KB, text/plain)
2017-06-26 23:49 UTC, bluescreenavenger
Details

Note You need to log in before you can comment on or make changes to this bug.
Description bluescreenavenger 2017-06-26 23:49:38 UTC
Created attachment 106322 [details]
Full stackdump of systemsettings crash

It could be because kactivites isn't properly configured (empty user profile as well), but when running systemsettings5, in the sidebar view, I get a kservice crash
Comment 1 Christoph Feck 2017-06-28 02:55:22 UTC
#0  0xf670205b in KSycocaEntry::name (this=0x0) at /srcbuild/kf5-kservice/src/sycoca/ksycocaentry.cpp:104
#1  0xef18f064 in MostUsedModel::data (this=0x567e8b70, index=..., role=0) at /srcbuild/systemsettings/sidebar/SidebarMode.cpp:181
#2  0xf50a7a4a in QModelIndex::data (arole=0, this=0xffffa540) at /opt/include/QtCore/qabstractitemmodel.h:432
Comment 2 rооt 2017-06-29 15:53:16 UTC
$ gdb systemsettings5 
GNU gdb (Ubuntu 8.0-0ubuntu1) 8.0
Copyright (C) 2017 Free Software Foundation, Inc.
License GPLv3+: GNU GPL version 3 or later <http://gnu.org/licenses/gpl.html>
This is free software: you are free to change and redistribute it.
There is NO WARRANTY, to the extent permitted by law.  Type "show copying"
and "show warranty" for details.
This GDB was configured as "x86_64-linux-gnu".
Type "show configuration" for configuration details.
For bug reporting instructions, please see:
<http://www.gnu.org/software/gdb/bugs/>.
Find the GDB manual and other documentation resources online at:
<http://www.gnu.org/software/gdb/documentation/>.
For help, type "help".
Type "apropos word" to search for commands related to "word"...
Reading symbols from systemsettings5...Reading symbols from /usr/lib/debug/.build-id/f9/37a8ac61d1d395775f46f635dd61f60ffec9b4.debug...done.
done.
(gdb) r
Starting program: /usr/bin/systemsettings5 
[Thread debugging using libthread_db enabled]
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[New Thread 0x7fe442c3b700 (LWP 22192)]
[New Thread 0x7fe43a2cd700 (LWP 22193)]
[New Thread 0x7fe42f424700 (LWP 22195)]
[New Thread 0x7fe425c3c700 (LWP 22196)]

Thread 1 "systemsettings5" received signal SIGSEGV, Segmentation fault.
0x00007fe4538e8dd8 in KSycocaEntry::name() const () from /usr/lib/x86_64-linux-gnu/libKF5Service.so.5
(gdb) backtrace 
#0  0x00007fe4538e8dd8 in KSycocaEntry::name() const () from /usr/lib/x86_64-linux-gnu/libKF5Service.so.5
#1  0x00007fe42fac3d49 in MostUsedModel::data (this=0x555555aef330, index=..., role=0) at ./sidebar/SidebarMode.cpp:181
#2  0x00007fe45049a04b in QModelIndex::data (arole=0, this=0x7fffffffaff0) at /usr/include/x86_64-linux-gnu/qt5/QtCore/qabstractitemmodel.h:432
#3  QQmlDMAbstractItemModelData::value (role=0, this=0x555555e54b80) at util/qqmladaptormodel.cpp:420
#4  QQmlDMCachedModelData::metaCall (this=0x555555e54b80, call=<optimized out>, id=<optimized out>, arguments=0x7fffffffb0a0) at util/qqmladaptormodel.cpp:292
#5  0x00007fe450604446 in QQmlPropertyData::readProperty (property=0x7fffffffb080, target=0x555555e54b80, this=0x555555e4d0a8)
    at ../../include/QtQml/5.9.0/QtQml/private/../../../../../src/qml/qml/qqmlpropertycache_p.h:302
#6  loadProperty (v4=0x555555d49870, object=0x555555e54b80, property=...) at jsruntime/qv4qobjectwrapper.cpp:166
#7  0x00007fe4506054be in QV4::QObjectWrapper::getQmlProperty (this=0x7fe42483d3e8, qmlContext=0x555555e55260, name=0x7fe42483d3e0, revisionMode=QV4::QObjectWrapper::IgnoreRevision, hasProperty=0x0, 
    includeImports=<optimized out>) at jsruntime/qv4qobjectwrapper.cpp:279
#8  0x00007fe45061e558 in QV4::Object::get (hasProperty=0x0, name=<optimized out>, this=<optimized out>) at jsruntime/qv4object_p.h:334
#9  QV4::Runtime::method_getProperty (engine=0x555555d49870, object=..., nameIndex=<optimized out>) at jsruntime/qv4runtime.cpp:713
#10 0x00007fe4381373db in ?? ()
#11 0x0000555555d61112 in ?? ()
#12 0x0000555500000029 in ?? ()
#13 0x0000555555d49750 in ?? ()
#14 0x00007fe400000003 in ?? ()
#15 0x7ff0000000000000 in ?? ()
#16 0x4059000000000000 in ?? ()
#17 0x4055400000000000 in ?? ()
#18 0x00007fe42483d370 in ?? ()
#19 0x00007fffffffb4a0 in ?? ()
#20 0x0000555555d7dbb0 in ?? ()
#21 0x0000555555d49870 in ?? ()
#22 0x00007fe450595787 in QV4::ExecutionContext::simpleCall (this=<optimized out>, scope=..., callData=callData@entry=0x7fe42483d328, function=0x7fe42483d3d8) at jsruntime/qv4context.cpp:355
#23 0x00007fe4506af7f9 in QQmlJavaScriptExpression::evaluate (this=this@entry=0x555555e58ce0, callData=0x7fe42483d328, isUndefined=isUndefined@entry=0x7fffffffb3ef, scope=...) at qml/qqmljavascriptexpression.cpp:222
#24 0x00007fe4506b9a88 in QQmlNonbindingBinding::doUpdate (this=0x555555e58ce0, watcher=..., flags=..., scope=...) at qml/qqmlbinding.cpp:206
#25 0x00007fe4506b6cc3 in QQmlBinding::update (this=0x555555e58ce0, flags=...) at qml/qqmlbinding.cpp:167
#26 0x00007fe4506c24ff in QQmlObjectCreator::finalize (this=0x555555e4dc00, interrupt=...) at qml/qqmlobjectcreator.cpp:1223
#27 0x00007fe450646a1a in QQmlIncubatorPrivate::incubate (this=0x555555e4da60, i=...) at qml/qqmlincubator.cpp:347
#28 0x00007fe4506472b7 in QQmlEnginePrivate::incubate (this=0x555555d48d80, i=..., forContext=forContext@entry=0x555555d7ea10) at qml/qqmlincubator.cpp:92
#29 0x00007fe4506eec6c in QQmlDelegateModelItem::incubateObject (this=this@entry=0x555555e54b80, component=<optimized out>, engine=<optimized out>, context=context@entry=0x555555e4db40, 
    forContext=forContext@entry=0x555555d7ea10) at types/qqmldelegatemodel.cpp:1959
#30 0x00007fe4506f5486 in QQmlDelegateModelPrivate::object (this=this@entry=0x555555d897b0, group=QQmlListCompositor::Default, index=index@entry=1, asynchronous=asynchronous@entry=false)
    at types/qqmldelegatemodel.cpp:995
#31 0x00007fe4506f5735 in QQmlDelegateModel::object (this=<optimized out>, index=1, asynchronous=<optimized out>) at types/qqmldelegatemodel.cpp:1031
#32 0x00007fe450c714a1 in QQuickRepeaterPrivate::requestItems (this=0x555555d891c0) at items/qquickrepeater.cpp:400
#33 0x00007fe450c7182c in QQuickRepeater::regenerate (this=this@entry=0x555555d61280) at items/qquickrepeater.cpp:394
#34 0x00007fe450c732da in QQuickRepeater::modelUpdated (this=0x555555d61280, changeSet=..., reset=<optimized out>) at items/qquickrepeater.cpp:456
#35 0x00007fe450c73530 in QQuickRepeater::qt_static_metacall (_o=_o@entry=0x555555d61280, _c=_c@entry=QMetaObject::InvokeMetaMethod, _id=_id@entry=7, _a=_a@entry=0x7fffffffbc10) at .moc/moc_qquickrepeater_p.cpp:140
#36 0x00007fe450c73ab8 in QQuickRepeater::qt_metacall (this=0x555555d61280, _c=QMetaObject::InvokeMetaMethod, _id=7, _a=0x7fffffffbc10) at .moc/moc_qquickrepeater_p.cpp:260
#37 0x00007fe452815e2c in QMetaObject::activate (sender=sender@entry=0x555555d60460, signalOffset=<optimized out>, local_signal_index=local_signal_index@entry=1, argv=argv@entry=0x7fffffffbc10)
    at kernel/qobject.cpp:3781
#38 0x00007fe4528165a7 in QMetaObject::activate (sender=sender@entry=0x555555d60460, m=m@entry=0x7fe4509e74e0 <QQmlInstanceModel::staticMetaObject>, local_signal_index=local_signal_index@entry=1, 
    argv=argv@entry=0x7fffffffbc10) at kernel/qobject.cpp:3628
#39 0x00007fe45070e5e6 in QQmlInstanceModel::modelUpdated (this=this@entry=0x555555d60460, _t1=..., _t2=<optimized out>) at .moc/moc_qqmlobjectmodel_p.cpp:222
#40 0x00007fe4506ed608 in QQmlDelegateModelPrivate::emitModelUpdated (this=<optimized out>, changeSet=..., reset=<optimized out>) at types/qqmldelegatemodel.cpp:1454
#41 0x00007fe4506f2f1f in QQmlDelegateModelGroupPrivate::emitModelUpdated (this=0x555555d89a30, reset=reset@entry=true) at types/qqmldelegatemodel.cpp:2267
#42 0x00007fe4506f30c4 in QQmlDelegateModelPrivate::emitChanges (this=0x555555d897b0) at types/qqmldelegatemodel.cpp:1473
#43 0x00007fe4506f9636 in QQmlDelegateModel::_q_modelReset (this=0x555555d60460) at types/qqmldelegatemodel.cpp:1513
#44 0x00007fe4506f9a25 in QQmlDelegateModel::qt_static_metacall (_o=_o@entry=0x555555d60460, _c=_c@entry=QMetaObject::InvokeMetaMethod, _id=_id@entry=7, _a=_a@entry=0x7fffffffbf10)
    at .moc/moc_qqmldelegatemodel_p.cpp:195
#45 0x00007fe4506f9f58 in QQmlDelegateModel::qt_metacall (this=0x555555d60460, _c=QMetaObject::InvokeMetaMethod, _id=7, _a=0x7fffffffbf10) at .moc/moc_qqmldelegatemodel_p.cpp:336
#46 0x00007fe452815e2c in QMetaObject::activate (sender=sender@entry=0x555555aef330, signalOffset=<optimized out>, local_signal_index=local_signal_index@entry=18, argv=argv@entry=0x7fffffffbf10)
    at kernel/qobject.cpp:3781
#47 0x00007fe4528165a7 in QMetaObject::activate (sender=sender@entry=0x555555aef330, m=m@entry=0x7fe452ca7e00 <QAbstractItemModel::staticMetaObject>, local_signal_index=local_signal_index@entry=18, 
    argv=argv@entry=0x7fffffffbf10) at kernel/qobject.cpp:3628
#48 0x00007fe45288d67a in QAbstractItemModel::modelReset (this=this@entry=0x555555aef330, _t1=...) at .moc/moc_qabstractitemmodel.cpp:659
#49 0x00007fe45278b48c in QAbstractItemModel::endResetModel (this=this@entry=0x555555aef330) at itemmodels/qabstractitemmodel.cpp:3230
---Type <return> to continue, or q <return> to quit---
#50 0x00007fe4527b7622 in QSortFilterProxyModel::setSourceModel (this=0x555555aef330, sourceModel=0x555555aef7d0) at itemmodels/qsortfilterproxymodel.cpp:1816
#51 0x00007fe42fac1fa1 in MostUsedModel::setResultModel(KActivities::Stats::ResultModel*)::{lambda()#1}::operator()() const (__closure=<synthetic pointer>) at ./sidebar/SidebarMode.cpp:137
#52 MostUsedModel::setResultModel (model=0x555555db8f70, this=0x555555aef330) at ./sidebar/SidebarMode.cpp:146
#53 SidebarMode::initWidget (this=this@entry=0x555555aeea70) at ./sidebar/SidebarMode.cpp:469
#54 0x00007fe42fac22e9 in SidebarMode::mainWidget (this=0x555555aeea70) at ./sidebar/SidebarMode.cpp:261
#55 0x00005555555624b7 in SettingsBase::changePlugin (this=this@entry=0x555555868480) at ./app/SettingsBase.cpp:328
#56 0x00005555555647e4 in SettingsBase::initApplication (this=<optimized out>) at ./app/SettingsBase.cpp:125
#57 0x00007fe452822286 in QtPrivate::QSlotObjectBase::call (a=0x7fffffffc2e0, r=<optimized out>, this=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qobject_impl.h:101
#58 QSingleShotTimer::timerEvent (this=0x555555a5f6d0) at kernel/qtimer.cpp:318
#59 0x00007fe452816cb3 in QObject::event (this=0x555555a5f6d0, e=<optimized out>) at kernel/qobject.cpp:1268
#60 0x00007fe4543d3a5c in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0x555555a5f6d0, e=0x7fffffffc5b0) at kernel/qapplication.cpp:3717
#61 0x00007fe4543db361 in QApplication::notify (this=0x7fffffffc8e0, receiver=0x555555a5f6d0, e=0x7fffffffc5b0) at kernel/qapplication.cpp:3476
#62 0x00007fe4527e8e70 in QCoreApplication::notifyInternal2 (receiver=0x555555a5f6d0, event=event@entry=0x7fffffffc5b0) at kernel/qcoreapplication.cpp:1018
#63 0x00007fe45283d43e in QCoreApplication::sendEvent (event=0x7fffffffc5b0, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:233
#64 QTimerInfoList::activateTimers (this=0x5555557d86c0) at kernel/qtimerinfo_unix.cpp:643
#65 0x00007fe45283dc91 in timerSourceDispatch (source=<optimized out>) at kernel/qeventdispatcher_glib.cpp:182
#66 0x00007fe44bc76587 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#67 0x00007fe44bc767f0 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#68 0x00007fe44bc7689c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#69 0x00007fe45283e7cf in QEventDispatcherGlib::processEvents (this=0x5555557e14c0, flags=...) at kernel/qeventdispatcher_glib.cpp:423
#70 0x00007fe4527e706a in QEventLoop::exec (this=this@entry=0x7fffffffc800, flags=..., flags@entry=...) at kernel/qeventloop.cpp:212
#71 0x00007fe4527efbb4 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1291
#72 0x000055555555fcba in main (argc=<optimized out>, argv=<optimized out>) at ./app/main.cpp:62
(gdb)
Comment 3 Marco Martin 2017-07-06 12:44:19 UTC
Git commit c72349a81b1302f33ffb4c6bb83163f5b2e58d17 by Marco Martin.
Committed on 06/07/2017 at 12:43.
Pushed by mart into branch 'master'.

kservices in MenuItem can be not valid

M  +10   -2    sidebar/SidebarMode.cpp

https://commits.kde.org/systemsettings/c72349a81b1302f33ffb4c6bb83163f5b2e58d17