kservices in MenuItem can be not valid

BUG:381701